<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background_white"
        android:orientation="vertical">

<!--
        <include layout="@layout/toolbar_item" />
-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:background="@drawable/flat_header_shape2">

      <RelativeLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="20dp"
          android:layout_centerInParent="true"

          android:background="@drawable/flat_header_image_background">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="150dp"
                android:layout_height="150dp"

                android:layout_centerInParent="true"
                android:gravity="center"
                card_view:cardCornerRadius="20dp"
                card_view:cardElevation="0dp"
                card_view:cardMaxElevation="0dp">

                <ImageView
                    android:id="@+id/imgFoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:scaleType="centerCrop"
                    >

                </ImageView>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>
        </RelativeLayout>
<!--        <include layout="@layout/flat_delimiter" />-->


        <com.example.financeassistant.view.StrokeTextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/flat_delimiter_layout_height"
            android:layout_weight="1"
            app:text="@string/title_flat_name"
            app:textColor="@color/color_stroke_delimiter_text"
            app:lineColor="@color/flat_item_delimiter_background"
            app:textOffset="@dimen/flat_delimiter_text_start_offset"
            app:textSize="14sp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/flat_margin_start"
            android:layout_marginEnd="@dimen/flat_margin_end"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/etFlatName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:ems="10"
                android:gravity="start|center"
                android:hint="@string/title_flat_name" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="nameMicro"
                android:layout_weight="1"
                android:background="@null"
                android:layout_margin="5dp"
                android:src="@drawable/micro" />

        </LinearLayout>



<!--        <include layout="@layout/flat_delimiter" />-->

        <com.example.financeassistant.view.StrokeTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/flat_delimiter_layout_height"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/flat_item_margin_top"
            app:text="@string/title_flat_type"
            app:textColor="@color/color_stroke_delimiter_text"
            app:lineColor="@color/flat_item_delimiter_background"
            app:textOffset="@dimen/flat_delimiter_text_start_offset"
            app:textSize="14sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/flat_margin_start"
            android:layout_marginEnd="@dimen/flat_margin_end"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                >
            </Spinner>

        </LinearLayout>

<!--        <include layout="@layout/flat_delimiter" />-->

        <LinearLayout
            android:id="@+id/adresLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

          <com.example.financeassistant.view.StrokeTextView
              android:layout_width="match_parent"
              android:layout_height="@dimen/flat_delimiter_layout_height"
              android:layout_weight="1"
              android:layout_marginTop="@dimen/flat_item_margin_top"
              app:text="@string/title_flat_adres"
              app:textColor="@color/color_stroke_delimiter_text"
              app:lineColor="@color/flat_item_delimiter_background"
              app:textOffset="@dimen/flat_delimiter_text_start_offset"
              app:textSize="14sp"
              />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/flat_margin_start"
                android:layout_marginEnd="@dimen/flat_margin_end"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etAdres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/btMicr2"
                    android:hint="@string/title_flat_adres" />

                <ImageButton
                    android:id="@+id/btMicr2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="adresMicro"
                    android:background="@null"
                    android:layout_marginEnd="5dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/micro" />

            </RelativeLayout>
        </LinearLayout>

<!--        <include layout="@layout/flat_delimiter" />-->

      <com.example.financeassistant.view.StrokeTextView
          android:layout_width="match_parent"
          android:layout_height="@dimen/flat_delimiter_layout_height"
          android:layout_weight="1"
          android:layout_marginTop="@dimen/flat_item_margin_top"
          app:text="@string/title_flat_parameters"
          app:textColor="@color/color_stroke_delimiter_text"
          app:lineColor="@color/flat_item_delimiter_background"
          app:textOffset="@dimen/flat_delimiter_text_start_offset"
          app:textSize="14sp"
          />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/flat_margin_start"
            android:layout_marginEnd="@dimen/flat_margin_end"
            android:orientation="vertical">

          <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etParam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/title_flat_parameters"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/btMicrParam"
                    />

                <ImageButton
                    android:id="@+id/btMicrParam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="adresMicro"
                    android:background="@null"
                    android:layout_marginEnd="5dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/micro" />

            </RelativeLayout>
        </LinearLayout>

<!--        <include layout="@layout/flat_delimiter" />-->

      <com.example.financeassistant.view.StrokeTextView
          android:layout_width="match_parent"
          android:layout_height="@dimen/flat_delimiter_layout_height"
          android:layout_weight="1"
          android:layout_marginTop="@dimen/flat_item_margin_top"
          app:text="@string/toolbar_credit"
          app:textColor="@color/color_stroke_delimiter_text"
          app:lineColor="@color/flat_item_delimiter_background"
          app:textOffset="@dimen/flat_delimiter_text_start_offset"
          app:textSize="14sp"
          />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/flat_margin_start"
            android:layout_marginEnd="@dimen/flat_margin_end"
            android:orientation="vertical">

          <Spinner
                android:id="@+id/spCredit"
                android:layout_weight="200"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                >
            </Spinner>

        </LinearLayout>

<!--        <include layout="@layout/flat_delimiter" />-->

      <com.example.financeassistant.view.StrokeTextView
          android:layout_width="match_parent"
          android:layout_height="@dimen/flat_delimiter_layout_height"
          android:layout_weight="1"
          android:layout_marginTop="@dimen/flat_item_margin_top"
          app:text="@string/title_flat_summa"
          app:textColor="@color/color_stroke_delimiter_text"
          app:lineColor="@color/flat_item_delimiter_background"
          app:textOffset="@dimen/flat_delimiter_text_start_offset"
          app:textSize="@dimen/flat_delimiter_text_size"
          />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/flat_margin_start"
            android:layout_marginEnd="@dimen/flat_margin_end"
            android:orientation="vertical">

<!--            <TextView-->
<!--                android:id="@+id/tvSumma"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textColor="@color/colorLabel"-->
<!--                android:text="@string/title_flat_summa" />-->


            <EditText
                android:id="@+id/etSumma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:inputType="numberDecimal"
                android:hint="@string/title_flat_summa"
                >
            </EditText>

        </LinearLayout>

<!--        <include layout="@layout/flat_delimiter" />-->


      <com.example.financeassistant.view.StrokeTextView
          android:layout_width="match_parent"
          android:layout_height="@dimen/flat_delimiter_layout_height"
          android:layout_weight="1"
          android:layout_marginTop="@dimen/flat_item_margin_top"
          app:text="@string/title_flat_actual"
          app:textColor="@color/color_stroke_delimiter_text"
          app:lineColor="@color/flat_item_delimiter_background"
          app:textOffset="@dimen/flat_delimiter_text_start_offset"
          app:textSize="@dimen/flat_delimiter_text_size"
          />

        <Switch
            android:id="@+id/cbFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="@dimen/flat_margin_start"
            android:layout_marginEnd="@dimen/flat_margin_end"
            android:text="@string/title_flat_finish"
            android:textSize="@dimen/flat_text_size"
        />

    </LinearLayout>


</ScrollView >
