<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_OK"
        android:title="OK"
        android:icon="@drawable/img_checkmark"
        yourapp:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/remove"
        android:icon="@drawable/delete_item"
        yourapp:showAsAction="always" />

</menu>