...
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layoutDescription="@xml/flat_motion"
    android:id="@+id/flatMoutionlayout"
    app:motionDebug="NO_DEBUG"
    >

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/flatSwipeRefreshLayout"
        android:layout_width="match_parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


      <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/PageFlatsFloatingActionButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:tooltipText="+"
          android:background="@color/TaskItemToolbar"
          app:srcCompat="@drawable/plus"
          android:layout_marginBottom="@dimen/fab_margin"
...
